--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+ollama
 chromadb
 langchain
-openai
 python-dotenv
+sentence-transformers
 langchain_community
 langchain_text_splitters
 langchain_openai
-pypdf
+pymupdf
 python-dotenv
 streamlit
