--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 ollama
+openai
 chromadb
 langchain
+embeddings
 python-dotenv
 sentence-transformers
 langchain_community
 langchain_text_splitters
+langchain_ollama
 python-dotenv
 streamlit
 pypdf
+mistralai
+uuid
